earth: Change localversion

--- a/arch/arm64/configs/earth_defconfig
+++ b/arch/arm64/configs/earth_defconfig
@@ -1,6 +1,6 @@
 #C3T code for HQ-219004 by wangjian at 2022/08/11 start 
-CONFIG_LOCALVERSION="-perf"
-CONFIG_LOCALVERSION_AUTO=y
+CONFIG_LOCALVERSION="-DevBX"
+CONFIG_LOCALVERSION_AUTO=n
 #C3T code for HQ-219004 by wangjian at 2022/08/11 end 
 CONFIG_PREEMPT=y
 CONFIG_IKHEADERS=y
