--- a/arch/arm64/configs/earth_defconfig
+++ b/arch/arm64/configs/earth_defconfig
@@ -54,7 +54,7 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
-CONFIG_KPROBES=y
+# CONFIG_KPROBES is not set
 CONFIG_MODULE_SRCVERSION_ALL=y
 # CONFIG_BLK_DEV_BSG is not set
 CONFIG_BLK_INLINE_ENCRYPTION=y
@@ -503,3 +503,5 @@ CONFIG_DEBUG_POLICY=y
 # C3T code for HQ-223831 by wangmingyu at 2022/09/09 end
 CONFIG_MTK_SYSTRACKER_V2=n
 CONFIG_MTK_SYSTRACKER_DISABLE=y
+# KernelSU
+CONFIG_KSU=y
